update package-mode setting in pyproject.toml for improved package management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "This repo holds example code to check the timing between devices 
 authors = ["JuliusWelzel <julius.welzel@gmail.com>"]
 license = "GNU"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
